[package]
name = "jupyter2typst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = { version = "1.0.0-alpha.8", git = "https://github.com/wooorm/markdown-rs" }
ramhorns = "0.14"
rustop = "1.1"
tinyjson = "2.5"
